@@ -1,7 +1,11 @@
 package com.csun.mall.common.tools;
 
+import com.csun.mall.domain.CsrMember;
+import com.csun.mall.pojo.dto.CsrMemberDTO;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.BeanUtils;
+
+import java.lang.reflect.InvocationTargetException;
 
 @Slf4j
 public class PojoConvertTool {
@@ -11,14 +15,18 @@ public class PojoConvertTool {
         T another = null;
         if (source != null) {
             try {
-                another = target.newInstance();
+                another = target.getDeclaredConstructor().newInstance();
                 BeanUtils.copyProperties(source, another);
-            } catch (InstantiationException | IllegalAccessException e) {
+            } catch (InstantiationException | IllegalAccessException | NoSuchMethodException | InvocationTargetException e) {
                 e.printStackTrace();
                 log.error("类转换失败", e);
             }
         }
         return another;
+    }
 
+    public static void main(String[] args) {
+        String str = "123456";
+        System.out.println(str.contains(" "));
     }
 }
